# epblas-parallel

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  BUGFIX-20260527.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTEXT.md  CONTRIBUTING.md  README.md
example/: CMakeLists.txt  scale.c
src/epblas-openblas/: CHECKLIST.md  CMakeLists.txt
src/epblas-openblas/common/: eblas_l3_real.h  mblas_l3_complex.cpp  mblas_l3_complex.h  mblas_l3_real.cpp  mblas_l3_real.h  qblas_l3_complex.c  qblas_l3_complex.h  qblas_l3_real.c  qblas_l3_real.h
src/epblas-openblas/kind10/: CMakeLists.txt  easum.c  eaxpy.c  eblas_tuning.h  ecabs1.c  ecopy.c  edot.c  egbmv.c  egemm.c  egemmtr.c  egemv.c  eger.c  enrm2.c  erot.c  erotg.c  erotm.c  erotmg.c  esbmv.c  escal.c  espmv.c  espr.c  espr2.c  eswap.c  esymm.c  esymv.c  esyr.c  esyr2.c  esyr2k.c  esyrk.c  etbmv.c  etbsv.c  etpmv.c  etpsv.c  etrmm.c  etrmv.c  etrsm.c  etrsv.c  eyasum.c  eynrm2.c  ieamax.c  (+37 more)
src/epblas-openblas/kind16/: CMakeLists.txt  iqamax.c  ixamax.c  qasum.c  qaxpy.c  qblas_tuning.h  qcabs1.c  qcopy.c  qdot.c  qgbmv.c  qgemm.c  qgemmtr.c  qgemv.c  qger.c  qnrm2.c  qrot.c  qrotg.c  qrotm.c  qrotmg.c  qsbmv.c  qscal.c  qspmv.c  qspr.c  qspr2.c  qswap.c  qsymm.c  qsymv.c  qsyr.c  qsyr2.c  qsyr2k.c  qsyrk.c  qtbmv.c  qtbsv.c  qtpmv.c  qtpsv.c  qtrmm.c  qtrmv.c  qtrsm.c  qtrsv.c  qxasum.c  (+37 more)
src/epblas-openblas/multifloats/: CMakeLists.txt  imamax.cpp  iwamax.cpp  masum.cpp  maxpy.cpp  mblas_tuning.h  mcabs1.cpp  mcopy.cpp  mdot.cpp  mgbmv.cpp  mgemm.cpp  mgemmtr.cpp  mgemv.cpp  mger.cpp  mnrm2.cpp  mrot.cpp  mrotg.cpp  mrotm.cpp  mrotmg.cpp  msbmv.cpp  mscal.cpp  mspmv.cpp  mspr.cpp  mspr2.cpp  mswap.cpp  msymm.cpp  msymv.cpp  msyr.cpp  msyr2.cpp  msyr2k.cpp  msyrk.cpp  mtbmv.cpp  mtbsv.cpp  mtpmv.cpp  mtpsv.cpp  mtrmm.cpp  mtrmv.cpp  mtrsm.cpp  mtrsv.cpp  mwasum.cpp  (+37 more)
src/epblas-parallel/: CMakeLists.txt
src/epblas-parallel/common/: blas_char.h  blas_math.h  blas_omp.h  epblas_facade.h
src/epblas-parallel/kind10/: CMakeLists.txt  easum.c  eaxpy.c  ecabs1.c  ecopy.c  edot.c  egbmv.c  egemm_kernel.h  egemm_parallel.c  egemm_serial.c  egemmtr_kernel.h  egemmtr_parallel.c  egemmtr_serial.c  egemv.c  eger.c  enrm2.c  erot.c  erotg.c  erotm.c  erotmg.c  esbmv.c  escal.c  espmv.c  espr.c  espr2.c  eswap.c  esymm_kernel.h  esymm_parallel.c  esymm_serial.c  esymv.c  esyr.c  esyr2.c  esyr2k_kernel.h  esyr2k_parallel.c  esyr2k_serial.c  esyrk.c  esyrk_kernel.h  esyrk_parallel.c  esyrk_serial.c  etbmv.c  (+80 more)
src/epblas-parallel/kind16/: CMakeLists.txt  iqamax.c  ixamax.c  qasum.c  qaxpy.c  qcabs1.c  qcopy.c  qdot.c  qgbmv.c  qgemm_kernel.h  qgemm_parallel.c  qgemm_serial.c  qgemmtr.c  qgemmtr_kernel.h  qgemmtr_parallel.c  qgemmtr_serial.c  qgemv.c  qger.c  qnrm2.c  qrot.c  qrotg.c  qrotm.c  qrotmg.c  qsbmv.c  qscal.c  qspmv.c  qspr.c  qspr2.c  qswap.c  qsymm.c  qsymm_kernel.h  qsymm_parallel.c  qsymm_serial.c  qsymv.c  qsyr.c  qsyr2.c  qsyr2k.c  qsyr2k_kernel.h  qsyr2k_parallel.c  qsyr2k_serial.c  (+89 more)
src/epblas-parallel/multifloats/: CMakeLists.txt  imamax.cpp  iwamax.cpp  masum.cpp  maxpy.cpp  mcabs1.cpp  mcopy.cpp  mdot.cpp  mf_cpu.cpp  mf_dispatch.h  mf_dotkernel.h  mf_kernels.h  mf_omp.h  mf_packed.h  mf_pred.h  mf_rank1_simd.h  mf_simd_dd.h  mf_simd_exact.h  mf_simd_fast.h  mf_tri_simd.h  mf_util.h  mgbmv.cpp  mgemm_kernel.h  mgemm_parallel.cpp  mgemm_serial.cpp  mgemmtr_kernel.h  mgemmtr_parallel.cpp  mgemmtr_serial.cpp  mgemv.cpp  mger.cpp  mnrm2.cpp  mrot.cpp  mrotg.cpp  mrotm.cpp  mrotmg.cpp  msbmv.cpp  mscal.cpp  mspmv.cpp  mspr.cpp  mspr2.cpp  (+91 more)
src/epopenblas/: CMakeLists.txt
src/epopenblas/kind10/: CMakeLists.txt
src/parallel_blas/: CMakeLists.txt
src/parallel_blas/kind10/: CMakeLists.txt
src/parallel_blas/kind16/: CMakeLists.txt
src/parallel_blas/multifloats/: CMakeLists.txt
test/epblas-openblas/: CMakeLists.txt
test/epblas-parallel/: CMakeLists.txt
test/epblas-parallel/common/: fuzz_util_body.fypp
test/epblas-parallel/consistency/: fuzz_copyswap_complex_body.fypp  fuzz_copyswap_real_body.fypp  fuzz_dot_complex_body.fypp  fuzz_dot_real_body.fypp  fuzz_gbmv_real_body.fypp  fuzz_gemm_real_body.fypp  fuzz_gemmtr_complex_body.fypp  fuzz_gemv_complex_body.fypp  fuzz_gemv_real_body.fypp  fuzz_hbmv_body.fypp  fuzz_hemm_body.fypp  fuzz_hemv_body.fypp  fuzz_her2_body.fypp  fuzz_her2k_body.fypp  fuzz_hpmv_body.fypp  fuzz_hpr2_body.fypp  fuzz_hpr_body.fypp  fuzz_iamax_complex_body.fypp  fuzz_iamax_real_body.fypp  fuzz_norm_mixed_body.fypp  fuzz_norm_real_body.fypp  fuzz_sbmv_body.fypp  fuzz_scal_real_body.fypp  fuzz_spmv_body.fypp  fuzz_symm_complex_body.fypp  fuzz_symm_real_body.fypp  fuzz_symv_real_body.fypp  fuzz_syr2_real_body.fypp  fuzz_syr2k_complex_body.fypp  fuzz_syr2k_real_body.fypp  fuzz_syr_real_body.fypp  fuzz_syrk_real_body.fypp  fuzz_tbmv_complex_body.fypp  fuzz_tbmv_real_body.fypp  fuzz_tbsv_complex_body.fypp  fuzz_tbsv_real_body.fypp  fuzz_tpmv_complex_body.fypp  fuzz_tpmv_real_body.fypp  fuzz_tpsv_complex_body.fypp  fuzz_tpsv_real_body.fypp  (+7 more)
tests/: CMakeLists.txt
tests/blas_epopenblas/: CMakeLists.txt
tests/blas_parallel/: CMakeLists.txt
tests/epblas-openblas/: CMakeLists.txt
tests/epblas-parallel/: CMakeLists.txt
tests/epblas-parallel/bench/: bench_cabs_complex_body.fypp
tests/epblas-parallel/common/: fuzz_util_body.fypp
tests/epblas-parallel/consistency/: fuzz_gbmv_complex_body.fypp  fuzz_gbmv_real_body.fypp  fuzz_gemm_complex_body.fypp  fuzz_gemm_real_body.fypp  fuzz_gemmtr_complex_body.fypp  fuzz_gemmtr_real_body.fypp  fuzz_gemv_complex_body.fypp  fuzz_gemv_real_body.fypp  fuzz_ger_complex_body.fypp  fuzz_ger_real_body.fypp  fuzz_hbmv_body.fypp  fuzz_hemm_body.fypp  fuzz_hemv_body.fypp  fuzz_her2_body.fypp  fuzz_her2k_body.fypp  fuzz_her_body.fypp  fuzz_herk_body.fypp  fuzz_hpmv_body.fypp  fuzz_hpr2_body.fypp  fuzz_hpr_body.fypp  fuzz_sbmv_body.fypp  fuzz_spmv_body.fypp  fuzz_spr2_body.fypp  fuzz_spr_body.fypp  fuzz_symm_complex_body.fypp  fuzz_symm_real_body.fypp  fuzz_symv_real_body.fypp  fuzz_syr2_real_body.fypp  fuzz_syr2k_complex_body.fypp  fuzz_syr2k_real_body.fypp  (+19 more)
(+1012 files in other folders)
